# PortKiller-Windows

./: .gitignore  BUILD_STATUS.txt  BUILD_WINDOWS.md  CLAUDE.md  Cargo.toml  INSTALLER_SETUP.md  LICENSE  PROJECT_INDEX.json  QUICK_BUILD.md  README.md  RELEASE_CHECKLIST.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: AppIcon.icns
installer/: README.md  portkiller.iss
scripts/: build-app.sh  build-windows.bat  build-windows.ps1  create-icon.py  create-icon.sh  create-menubar-icon.sh  release.sh  start-test-ports.sh
src/: app.rs  config.rs  lib.rs  main.rs  model.rs  notify.rs  utils.rs
src/integrations/: brew.rs  docker.rs  windows_services.rs
src/platform/: mod.rs
src/platform/macos/: kill.rs  launch.rs  mod.rs  notify.rs  ports.rs
src/platform/windows/: kill.rs  launch.rs  mod.rs  notify.rs  ports.rs
src/ui/: icon.rs  menu.rs
