[package]
name = "macport"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
env_logger = "0.11"
log = "0.4"
nix = { version = "0.29", features = ["signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.21"
winit = "0.30"
