[package]
name = "portkiller"
version = "0.3.0-win"
edition = "2024"

[dependencies]
anyhow = "1.0"
png = "0.17"
auto-launch = "0.5"
crossbeam-channel = "0.5"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.21"
notify = "8.0"
winit = "0.30"
dirs = "5.0"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["signal"] }
smappservice-rs = "0.1"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
] }
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

